# C-Standard-Template-Library-in-Practice

./: .gitignore  README.md
Section 1/Section 1 Code Files/: CMakeLists.txt
Section 1/Section 1 Code Files/bitcoin/: CMakeLists.txt  bitcoin.sh
Section 2/Section 2 Code Files/Section 2 Code Examples/Video 2/: CMakeLists.txt
